@@ -30,8 +30,8 @@ Description: The Rcpp package provides R functions as well as a C++ library
  to use than the equivalent low-level loop code. The "Rcpp-sugar" vignette
  gives an overview of the feature.
  .
- Several examples are included, and more than 785 unit tests in over 357 unit
- test functions provide additional usage examples.
+ Several examples are included, and 800 unit tests in 362 unit test functions 
+ provide additional usage examples.
  .
  An earlier version of Rcpp, containing what we now call the 'classic Rcpp
  API' was written during 2005 and 2006 by Dominick Samperi.  This code has
